--- a/fe/index.html
+++ b/fe/index.html
@@ -66,7 +66,7 @@
             <section>
               <header>
                 <div class="info-personal"><h2>Tomás Sachini</h2>
-                  <img src="assets/Foto-cv.jpg" alt="Foto de una persona">
+                  <img src="assets/Foto-cv.jpg" alt="Foto de una persona"  class="foto-cv" style="width: 50%;; height: 300px;"">
                   <ul>
                     <li>Full Stack Developer Jr.</li>
                     <li>Ingeniero en programación</li>
@@ -83,13 +83,13 @@
                 <div class="experiencia">
                   <div class="trabajo">
                     <h4>Concesionaria Audi, 2017-2019</h4>
-                    <img src="fe\assets\renault.png" alt="logo de Audi">
+                    <img src="assets/Audi-logo.jpg" alt="logo de Audi" style="width: 20%;; height: 100px;"">
                     <p><strong>Vendedor de automóbiles</strong></p>
                     <p>Más de 250 vehículos vendidos.</p>
                   </div>
                   <div class="trabajo">
                     <h4> Seguridad cibernética en Concesionaria Jeep, 2019-2022</h4>
-                    <img src="fe\assets\renault.png" alt="logo de Renault">
+                    <img src="assets/Jeep-Logo.jpg" alt="logo de Renault" style="width: 20%;; height: 100px;">
                     <p><strong>Gerente de marketing y vendedor de automóbiles</strong></p>
                     <p>Más de 100 vehículos vendidos.</p>
                     <p>Encargado de las campañas de marketing durante todo 2019 y asesor de esta area en 2020</p>
@@ -104,7 +104,7 @@
             <section>
               <header>
                 <div class="info-personal"><h2>Joaquín Cardillo</h2>
-                  <img src="assets/foto comprimida.jpg" alt="Foto de una persona">
+                  <img src="assets/foto comprimida.jpg" alt="Foto de una persona" class="foto-cv" style="width: 50%;; height: 300px;">
                   <ul>
                     <li>Full Stack Developer Jr.</li>
                     <li>Traductor  profesional de inglés-español</li>
@@ -119,7 +119,7 @@
                 <div class="experiencia">
                   <div class="trabajo">
                     <h4>Concesionaria Renault, 2018-2020</h4>
-                    <img src="fe\assets\renault.png" alt="logo de Renault">
+                    <img src="assets/Renault-logo.jpg" alt="logo de Renault" style="width: 40%;; height: 150px;">
                     <p><strong>Gerente de marketing y vendedor de automóbiles</strong></p>
                     <p>Más de 100 vehículos vendidos.</p>
                     <p>Encargado de las campañas de marketing durante todo 2019 y asesor de esta area en 2020</p>
